# pulpo

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh  pulpo.desktop  rNotify.conf  test.sh  test_gotify.sh  test_ntfy.sh
config/: pulpo.conf
resources/: tray-icon.xml
src/: args.rs  config.rs  errors.rs  gdnd_client.rs  gotify.rs  gotifywsclient.rs  helpers.rs  main.rs  ntfyhttpclient.rs  ntfywsclient.rs  tray.rs  userauth.rs
