[package]
name = "pulpo"
version = "0.1.0"
authors = ["Fernando Seoane <fseoane@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pulpo"
path ="src/main.rs"


[dependencies]
toml = "0.8.8"
appindicator3 = "0.3.0"
gtk = "0.18"
glib = "0.18"
chrono = { version = "0.4.33" , features = ["serde"] }
daemonize = "0.5.0"
log = "0.4.20"
notify-rust = "4.10.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde_json = "1.0.113"
structopt = "0.3.26"
tungstenite = { version = "0.21.0" , features = ["native-tls"] }
#url =  { version = "2.5.0", features = ["serde"] }
url = "2.5.0"
ears = "0.8.0"
open = "5.0.1"
reqwest = "0.11.24"
nix = "0.26.0"
#nix = "0.27.1"
